my second comment

--- a/UI/templates/manage.html
+++ b/UI/templates/manage.html
@@ -10,13 +10,14 @@
     </head>
     <body>
          <div class="container">
-                          <br><br><label for="username"><b>Username</b></label>
+                          <br><br><h2><label for="username"><b>Username</b></label></h2>
                           <input type="text" placeholder="" name="username" required>
                       
-                          <br><br><label for="psw"><b>Password</b></label>
+                          <br><h2><label for="psw"><b>Password</b></label></h2>
                           <input type="password" placeholder="" name="psw" required>
                       
-                          <br><button type="submit">Login</button>
+                          <!-- <br><button type="submit">Login</button> -->
+                         <br><br> <a href="login.html" class="btn">Login</a>
                           <label>
                          <br><br><input type="checkbox" checked="checked" name="remember"> Remember me
 
