--- a/UI/templates/create.html
+++ b/UI/templates/create.html
@@ -14,15 +14,15 @@
 
             <h1>Welcome to the FREE Online diary</h1><br>
             <p> <h2>There's no time like the present - start your free online diary today!</p></h2>
-            <label for="uname"><b>Email</b></label>
-            <input type="text" placeholder="" name="uname" required>
-            <br><a></a>Already registered?</a> 
-            <br><a >log in </a> 
-            <p>Please note that no password is used yet. It will be created when your Email address is verified</p>
+            <label for="Email"><b>Email</b></label>
+            <br><input type="text" placeholder="" name="Email" required>
+            <!-- <br><a></a>Already registered?</a>  -->
+            <br><a href="login.html" class="btn" >login </a> 
+            <br><p>Please note that no password is used yet. It will be created when your Email address is verified</p>
 
-            <br><br><a href="create.html" class="btn">Create Your Diary</a>
-            <br><br><a href="manage.html" class="btn">Manage Your Diary</a>
-            <br><br><a href="view.html" class="btn">View Your Diary</a>
+            <br><br><br><a href="create.html" class="btn">Create Your Diary</a>
+            <br><br><br><a href="manage.html" class="btn">Manage Your Diary</a>
+            <br><br><br><a href="view.html" class="btn">View Your Diary</a>
         </div>
         
         
