--- a/UI/templates/index.html
+++ b/UI/templates/index.html
@@ -46,7 +46,8 @@
                                                
                          <label></br></div>
                 <div class="here">
-                         <br><a href="signup.html">sign up here</a>  
+                         <!-- <br><a href="signup.html">sign up here</a>   -->
+                        <br><br><br><br><br><br><br><br> <a href="create.html" class="btn">login</a>
                                  </br>
                                  </div> 
                                             
