--- a/UI/templates/style.css
+++ b/UI/templates/style.css
@@ -1,11 +1,12 @@
 body{
-    color:#4d4d4d;
-    background-image: url("images/book.PNG");
+    color:white;
+    /* background-image: url("images/book.PNG"); */
+    background-image:linear-gradient(to right, rgba(17, 17, 17, 0.9), rgba(14, 14, 14, 0.439)) ,  url("images/new.PNG");
     background-size: cover;
     /* width: 400px; */
     /* height: 500px;ssss */
     /* border-radius:20px; */
-    /* border:10px solid blue; */
+    /* border:10px solid blue;  */
 
 
 }
@@ -28,12 +29,13 @@ body{
     width: 90%;
     display: flex;
     height: 200px;
-    /* background-color:  #666666; */
+    background-color:  #666666;
     
     border-radius: 10px;
+    color: wheat;
     
     padding: 8px 10px 5px 10px;
-    background-color: #4d4d4d;
+    background-color: #666666;
     text-align: right;
     margin:20px;
 
@@ -58,7 +60,7 @@ body{
     background-color:#4d4d4d;
    margin: 20px;
    padding: 8px 10px 5px 10px;
-   color: white;
+   color: wheat;
    
 }
 
@@ -91,8 +93,8 @@ body{
 }
 
 .buttons{
-    margin-left: 10%;
-    padding-top: 23%;
+    margin-left: 5%;
+    padding-top: 10%;
 }
 
 
