--- a/UI/templates/view.html
+++ b/UI/templates/view.html
@@ -39,35 +39,35 @@
     <th>MODIFY</th>
   </tr>
   <tr>
-    <td>Jill@gmail.com</td>
-    <td>Looking for a one-of-a-kind personalised
+    <td><h4>Jill@gmail.com</td></h4>
+    <td><h4> for a one-of-a-kind personalised
         <br> place to keep track of your plans?
-         Partridge & Bell’s customisable diary lets you emboss your name on the cover</td>
+         Partridge & Bell’s customisable diary lets you emboss your name on the cover</td></h4>
     <td><br>
             <div class="submit">
-                    <button type="submit">View</button> <button type="submit">Add</button>
+                    <button type="submit">Edit</button> <button type="submit">Add</button>
                     <br><br></tr></tr></div>
                             
   </tr>
   <tr>
-    <td>Eve@gmail.com</td>
-    <td>Keep in mind, the option does come with a 10-character limit – 
+    <td><h4>Eve@gmail.com</td></h4>
+    <td><h4>Keep in mind, the option does come with a 10-character limit – 
        <br> bad news for the Constantines of the world.
-         The diary comes with a handy back pocke</td>
+         The diary comes with a handy back pocke</td></h4>
          <td><div class="submit">
-                <button type="submit">View</button> <button type="submit">Add</button>
+                <button type="submit">Edit</button> <button type="submit">Add</button>
             </td> <tr></tr></div >
         
            
   </tr>
   <tr>
-    <td>John1@gmail.com</td> 
-    <td>For those who like their diaries compact, 
+    <td><h4>John1@gmail.com</td></h4> 
+    <td><h4>For those who like their diaries compact, 
         this pocket weekly is the perfect size. 
         <br>It also comes in 11 different colours to choose from,
-         including three shades of blue </td>
+         including three shades of blue </td></h4>
         <td> <div class="submit">
-                <button type="submit">View</button> <button type="submit">Add</button>
+                <button type="submit">Edit</button> <button type="submit">Add</button>
                 </td><tr></tr></div>
                 
     
