MY ONLINE DIARY USER INTERFACE

--- a/UI/templates/index.html
+++ b/UI/templates/index.html
@@ -28,7 +28,7 @@
                                         
                 </div>
                 <div id="ten">
-                         <h1> Your online diary</h1>
+                         <h1> My Online diary</h1>
                          <h1>write down your life</h1>
                 </div>
                                                                                                                                                                                                                                                                                 </div>
@@ -36,18 +36,18 @@
                         <h1>login</h1>
                 <div class="container">
                          <br><br><br>
-                         <label for="uname"><b>Username</b></label>
-                        <input type="text" placeholder="" name="uname" required>
-                             <br>
+                         <label for="username"><b>Username</b></label>
+                        <input type="text" placeholder="" name="username" required>
+                             <br><br>
                                 <label for="psw"><b>Password</b></label>
-                                <input type="password" placeholder="" name="psw" required>
+                                <input type="password" placeholder="" name="password" required>
                               </br>
                                         
                                                
                          <label></br></div>
                 <div class="here">
                          <!-- <br><a href="signup.html">sign up here</a>   -->
-                        <br><br><br><br><br><br><br><br> <a href="create.html" class="btn">login</a>
+                        <br><br><br><br><br><br><br><br> <a href="signup.html" class="btn">sign up </a>
                                  </br>
                                  </div> 
                                             
@@ -70,6 +70,7 @@
                                                 <a href="manage.html" class="btn">Manage Your Diary</a>
                                                 <a href="view.html" class="btn">View Your Diary</a>
                                             </div>
+                                        </div> 
                     </div>
                  </body>
                 </html>
