--- a/UI/templates/create.html
+++ b/UI/templates/create.html
@@ -17,14 +17,15 @@
             <label for="Email"><b>Email</b></label>
             <br><input type="text" placeholder="" name="Email" required>
             <!-- <br><a></a>Already registered?</a>  -->
-            <br><a href="login.html" class="btn" >login </a> 
+            <br><br><br><a href="login.html" class="btn" >login </a> 
             <br><p>Please note that no password is used yet. It will be created when your Email address is verified</p>
 
+        <div class="low"></div>
             <br><br><br><a href="create.html" class="btn">Create Your Diary</a>
             <br><br><br><a href="manage.html" class="btn">Manage Your Diary</a>
             <br><br><br><a href="view.html" class="btn">View Your Diary</a>
         </div>
-        
-        
+    </div>
+</body>   
     </html>
     
