--- a/UI/templates/signup.html
+++ b/UI/templates/signup.html
@@ -42,7 +42,7 @@
     </div>
       
         <div class="container signin">
-          <p> <a href="manage.html">Sign in</a></p>
+          <p> <a href="signup.html">Sign in</a></p>
         </div>
       </form>
       </body>
