--- a/UI/templates/style.css
+++ b/UI/templates/style.css
@@ -98,9 +98,16 @@ body{
 }
 
 
-.here{
-    /* color: #3366cc; */
+
+.here a:hover{
+    background: #3366cc;
+    
+
 }
+.active{
+    background: #3366cc;
+}
+
 
 .submit{
     color:#3366cc;
@@ -117,13 +124,27 @@ body{
     border:1px solid#3366cc;
     text-decoration: none;
     padding:10px 15px;
-    color:#3366cc;
+    color:white;
 }
 .topnav{
     color:#3366cc;
-    /* background-color: #4d4d4d; */
+    /* background-color: #4d4d4d; i*/
     width: 100%;
     /* height: 300%; */
+}
+
+.row{
+    margin-top: 30px;
+}
+
+
+.row a:hover{
+    background: #3366cc;
+}
+
+
+.active{
+    background: #3366cc;
 }
 
 
