--- a/UI/templates/view.html
+++ b/UI/templates/view.html
@@ -51,9 +51,12 @@
   </tr>
   <tr>
     <td><h4>Eve@gmail.com</td></h4>
-    <td><h4>Keep in mind, the option does come with a 10-character limit – 
-       <br> bad news for the Constantines of the world.
-         The diary comes with a handy back pocke</td></h4>
+    <td><h4>     
+
+
+
+
+    </td></h4>
          <td><div class="submit">
                 <button type="submit">Edit</button> <button type="submit">Add</button>
             </td> <tr></tr></div >
@@ -61,11 +64,14 @@
            
   </tr>
   <tr>
-    <td><h4>John1@gmail.com</td></h4> 
-    <td><h4>For those who like their diaries compact, 
-        this pocket weekly is the perfect size. 
-        <br>It also comes in 11 different colours to choose from,
-         including three shades of blue </td></h4>
+    <td><h4>Rit1@gmail.com</td></h4> 
+    <td><h4> I am absolutely,completely and utterly stressed out now,
+         i have dance exams in 4 days. 
+       <br> i have to do it in front of audience but
+         i hate solos.The the reports have been handed out,
+         surpringly, all my grades where all average expected level or higher.
+       <br> Things have been pretty boring around, I`w been completing homework on time 
+     but its a complete struggle and its super boring. luckily, the stress is starting to fade now though.</td></h4>
         <td> <div class="submit">
                 <button type="submit">Edit</button> <button type="submit">Add</button>
                 </td><tr></tr></div>
