Add gh-pages linking them to the Readme

--- a/UI/templates/view.html
+++ b/UI/templates/view.html
@@ -40,9 +40,16 @@
   </tr>
   <tr>
     <td><h4>Jill@gmail.com</td></h4>
-    <td><h4> for a one-of-a-kind personalised
-        <br> place to keep track of your plans?
-         Partridge & Bell’s customisable diary lets you emboss your name on the cover</td></h4>
+    <td><h4> 
+
+        I am absolutely,completely and utterly stressed out now,
+        i have dance exams in 4 days. 
+      <br> i have to do it in front of audience but
+        i hate solos.The the reports have been handed out,
+        surpringly, all my grades where all average expected level or higher.
+      <br> Things have been pretty boring around, I`w been completing homework on time 
+    but its a complete struggle and its super boring. luckily, the stress is starting to fade now though
+    </td></h4>
     <td><br>
             <div class="submit">
                     <button type="submit">Edit</button> <button type="submit">Add</button>
@@ -51,7 +58,14 @@
   </tr>
   <tr>
     <td><h4>Eve@gmail.com</td></h4>
-    <td><h4>     
+    <td><h4> 
+        I am absolutely,completely and utterly stressed out now,
+        i have dance exams in 4 days. 
+      <br> i have to do it in front of audience but
+        i hate solos.The the reports have been handed out,
+        surpringly, all my grades where all average expected level or higher.
+      <br> Things have been pretty boring around, I`w been completing homework on time 
+    but its a complete struggle and its super boring. luckily, the stress is starting to fade now though    
 
 
 
