--- a/UI/templates/signup.html
+++ b/UI/templates/signup.html
@@ -29,12 +29,11 @@
           <b></b><input type="text" placeholder="" name="" required></br>
 
           <br><label for="psw"><b>Password</b></label>
+          <b></b><input type="text" placeholder="" name="" required></br>
           
-          <br><input type="" placeholder="" name="psw" required></br>
-      
-          <br><label for="psw-repeat"><b>Repeat Password</b></label>
+         <br><label for="psw-repeat"><b>Repeat Password</b></label>
          <br> <input type="" placeholder="" name="psw-repeat" required></br>
-          <hr>
+           
       
           <p>By creating an account you agree to our <a href="terms.html">Terms & Privacy</a>.</p>
           <br><button type="submit" class="registerbtn">Register</button>
