Add to gh-pages

--- a/UI/templates/create.html
+++ b/UI/templates/create.html
@@ -17,7 +17,7 @@
             <label for="Email"><b>Email</b></label>
             <br><input type="text" placeholder="" name="Email" required>
             <!-- <br><a></a>Already registered?</a>  -->
-            <br><br><br><a href="login.html" class="btn" >login </a> 
+            <br><br><br><a href="view.html" class="btn" >submit </a> 
             <br><p>Please note that no password is used yet. It will be created when your Email address is verified</p>
 
         <div class="low"></div>
