--- a/UI/templates/manage.html
+++ b/UI/templates/manage.html
@@ -19,8 +19,9 @@
                           <!-- <br><button type="submit">Login</button> -->
                          <br><br> <a href="login.html" class="btn">Login</a>
                           <label>
-                         <br><br><input type="checkbox" checked="checked" name="remember"> Remember me
-
+                         <br><br><input type="checkbox" checked="checked" name="Forgot password"> Forgot password
+                         <p> Click </p>
+                         <a href="signup.html">here</a>  
                          
                         </div>
                         </body>
