--- a/UI/templates/signup.html
+++ b/UI/templates/signup.html
@@ -13,7 +13,7 @@
         <header>
             <!-- <div class="login"> -->
 <div class="body"></div>
-<form action="action_page.php">
+<form action="action_page">
         <div class="container">
           <h1>Register</h1>
           <p>Please fill in this form to create an account.</p>
@@ -33,6 +33,9 @@
           
          <br><label for="psw-repeat"><b>Repeat Password</b></label>
          <br> <input type="" placeholder="" name="psw-repeat" required></br>
+         <!-- <div class="container submit"> -->
+                <!-- <p> <a href="">submit</a></p> -->
+              <!-- </div> -->
            
       
           <p>By creating an account you agree to our <a href="terms.html">Terms & Privacy</a>.</p>
@@ -40,8 +43,7 @@
         </div>
     </div>
       
-        <div class="container signin">
-          <p> <a href="signup.html">Sign in</a></p>
+        
         </div>
       </form>
       </body>
