--- a/UI/templates/view.html
+++ b/UI/templates/view.html
@@ -14,17 +14,10 @@
 
 
 <h2>View your Diaries</h2>
-<FORM action="/scripts/as_web7.exe" method="Get">
+
 
     <INPUT Type=Hidden Name=Command value=Search>
-    
-    <INPUT Type=Hidden Name=File value="DATAFILE.ASK"> 
-    
-    <INPUT Type=Hidden Name=NumRows value=10> 
-    
-    
-    
-    Enter your Search:<BR>
+     Enter your Search:<br>
     
     <INPUT Type=Text Size=45 Name=Request>
     
@@ -35,7 +28,7 @@
 <table style="width:90%">
   <tr>
     <th>EMAIL</th>
-    <th>YOUR STORIES</th> 
+    <th>ADD STORIES</th> 
     <th>MODIFY</th>
   </tr>
   <tr>
@@ -52,7 +45,8 @@
     </td></h4>
     <td><br>
             <div class="submit">
-                    <button type="submit">Edit</button> <button type="submit">Add</button>
+                    <button type="submit">Edit</button> <button type="submit">delete</button>
+                    
                     <br><br></tr></tr></div>
                             
   </tr>
@@ -72,7 +66,7 @@
 
     </td></h4>
          <td><div class="submit">
-                <button type="submit">Edit</button> <button type="submit">Add</button>
+                <button type="submit">Edit</button> <button type="submit">delete</button>
             </td> <tr></tr></div >
         
            
@@ -87,10 +81,10 @@
        <br> Things have been pretty boring around, I`w been completing homework on time 
      but its a complete struggle and its super boring. luckily, the stress is starting to fade now though.</td></h4>
         <td> <div class="submit">
-                <button type="submit">Edit</button> <button type="submit">Add</button>
+                <button type="submit">Edit</button> <button type="submit">delete</button>
                 </td><tr></tr></div>
                 
-    
+                <button type="submit">Save</button>
             
   </tr>
 </table>
