--- a/UI/templates/manage.html
+++ b/UI/templates/manage.html
@@ -10,10 +10,11 @@
     </head>
     <body>
          <div class="container">
-                          <br><br><h2><label for="username"><b>Username</b></label></h2>
+             <h2>Manage your Diary</h2>
+                          <br><br><br><br><br><label for="username"><b>Username</b></label>
                           <input type="text" placeholder="" name="username" required>
                       
-                          <br><h2><label for="psw"><b>Password</b></label></h2>
+                          <br><br><label for="psw"><b>Password</b></label>
                           <input type="password" placeholder="" name="psw" required>
                       
                           <!-- <br><button type="submit">Login</button> -->
@@ -21,7 +22,7 @@
                           <label>
                          <br><br><input type="checkbox" checked="checked" name="Forgot password"> Forgot password
                          <p> Click </p>
-                         <a href="signup.html">here</a>  
+                         <a href="reset.html" class="btn">here</a>  
                          
                         </div>
                         </body>
