--- a/UI/templates/style.css
+++ b/UI/templates/style.css
@@ -7,6 +7,7 @@ body{
     /* height: 500px;ssss */
     /* border-radius:20px; */
     /* border:10px solid blue;  */
+    text-align: center;
 
 
 }
