--- a/UI/templates/view.html
+++ b/UI/templates/view.html
@@ -84,10 +84,15 @@
                 <button type="submit">Edit</button> <button type="submit">delete</button>
                 </td><tr></tr></div>
                 
-                <button type="submit">Save</button>
+               
+                
             
   </tr>
+  
 </table>
+<button type="submit">Add Entry</button>
+
+<button type="submit">Save</button>
 
 </body>
 </html>
